# rust-xp-ollama

./: .gitignore  Cargo.toml  Makefile
examples/: 01-simple.rs  02-context.rs  03-chat.rs  04-embeddings.rs
src/: lib.rs
